--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <p class="block__text title5 price__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <div class="prise__cards">
                     <div class="row">
-                        <div class="col-4">
+                        <div class="col-md-4 col-12">
                             <div class="price__card">
                                     <h3 class="price__name title4">Basic</h3>
                                     <p class="price__cost title3">$10</p>
@@ -262,7 +262,7 @@
                                     </ul>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-md-4 col-12">
                             <div class="price__card price__card2">
                                     <h3 class="price__name title4">Optima</h3>
                                     <p class="price__cost title3">$20</p>
@@ -277,7 +277,7 @@
                                     </ul>
                             </div>
                         </div>
-                        <div class="col-4">
+                        <div class="col-md-4 col-12">
                             <div class="price__card">
                                     <h3 class="price__name title4">Pro</h3>
                                     <p class="price__cost title3">$30</p>
@@ -305,7 +305,7 @@
                 <p class="block__text reviews__text title5">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <div class="reviews__list">
                     <ul class="row">
-                        <div class="col-4">
+                        <div class="col-md-4 col-12">
                             <li class="reviews__item">
                                 <div class="reviews__quote">
                                     <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
@@ -326,7 +326,7 @@
                                 </div>  
                             </li>
                         </div>
-                        <div class="col-4">
+                        <div class="col-md-4 col-12">
                             <li class="reviews__item">
                                 <div class="reviews__quote">
                                     <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
@@ -346,7 +346,7 @@
                                 </div>
                             </li>
                         </div>
-                        <div class="col-4">
+                        <div class="col-md-4 col-12">
                             <li class="reviews__item">
                                 <div class="reviews__quote">
                                         <blockquote class="reviews__quote-descr title5">Lorem ipsum dolor sit amet, 
@@ -392,14 +392,14 @@
                 <form class="contact__form" action="">
                     <div class="contact__form-box">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-md-6 col-12">
                                 <div class="contact__form-part1">
                                     <input class="contact__form-input" type="text" name="nick1" size="40" placeholder="Name">
                                     <input class="contact__form-input" type="text" name="email1" size="40" placeholder="Email">
                                     <input class="contact__form-input password" type="password" name="password1" size="40" placeholder="Password">     
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-md-6 col-12">
                                 <textarea class="contact__textarea" rows="11" type="text" name="message" size="40" placeholder="Message"></textarea>
                             </div>
                         </div>
