--- a/Andrey/index.html
+++ b/Andrey/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Document</title>
 </head>
-<body>
+<body class="cont">
     <!-- HEADER -->
     <header class="header">
         <div class="container">
@@ -57,11 +57,9 @@
     </section>
     
     <footer class="footer">
-        <div class="container">
-            <div class="footer__box">
-                <p>This is my first  forum :)</p>
-                <div>&#169 Andrey Nikitin</div>
-            </div>
+        <div class="footer__box">
+            <p>This is my first  forum :)</p>
+            <div>&#169 Andrey Nikitin</div>
         </div>
     </footer>
 </body>
