--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -13,59 +13,75 @@
 </head>
 <body>
     <div class="box">
-        <div class="item">
+        <div class="item item-1">
             <div class="item__text">
-                <h2>Project name</h2>
-                <h3>User Interface Design</h3>
+                <div class="item-content">
+                    <h3>Project name</h3>
+                    <p>User Interface Design</p>
+                </div>
             </div>
             <img class="item__img" src="./img/img11.png" alt="project_foto">
         </div>
-        <div class="item">
+        <div class="item item-2">
             <div class="item__text">
-                <h2>Project name</h2>
-                <h3>User Interface Design</h3>
+                <div class="item-content">
+                    <h3>Project name</h3>
+                    <p>User Interface Design</p>
+                </div>
             </div>
             <img class="item__img" src="./img/img12.png" alt="project_foto">
         </div>
         <div class="item">
             <div class="item__text">
-                <h2>Project name</h2>
-                <h3>User Interface Design</h3>
+                <div class="item-content">
+                    <h3>Project name</h3>
+                    <p>User Interface Design</p>
+                </div>
             </div>
             <img class="item__img" src="./img/img13.png" alt="project_foto">
         </div>
-        <div class="item">
+        <div class="item item-3">
             <div class="item__text">
-                <h2>Project name</h2>
-                <h3>User Interface Design</h3>
+                <div class="item-content">
+                    <h3>Project name</h3>
+                    <p>User Interface Design</p>
+                </div>
             </div>
             <img class="item__img" src="./img/img14.png" alt="project_foto">
         </div>
-        <div class="item">
+        <div class="item item-4">
             <div class="item__text">
-                <h2>Project name</h2>
-                <h3>User Interface Design</h3>
+                <div class="item-content">
+                    <h3>Project name</h3>
+                    <p>User Interface Design</p>
+                </div>
             </div>
             <img class="item__img" src="./img/img21.png" alt="project_foto">
         </div>
-        <div class="item">
+        <div class="item item-5">
             <div class="item__text">
-                <h2>Project name</h2>
-                <h3>User Interface Design</h3>
+                <div class="item-content">
+                    <h3>Project name</h3>
+                    <p>User Interface Design</p>
+                </div>
             </div>
             <img class="item__img" src="./img/img22.png" alt="project_foto">
         </div>
-        <div class="item">
+        <div class="item item-6">
             <div class="item__text">
-                <h2>Project name</h2>
-                <h3>User Interface Design</h3>
+                <div class="item-content">
+                    <h3>Project name</h3>
+                    <p>User Interface Design</p>
+                </div>
             </div>
             <img class="item__img" src="./img/img23.png" alt="project_foto">
         </div>
-        <div class="item">
+        <div class="item item-7">
             <div class="item__text">
-                <h2>Project name</h2>
-                <h3>User Interface Design</h3>
+                <div class="item-content">
+                    <h3>Project name</h3>
+                    <p>User Interface Design</p>
+                </div>
             </div>
             <img class="item__img" src="./img/img24.png" alt="project_foto">
         </div>
