--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <a href=""><img class="header__logo" src="./image/AXITlogo.svg" alt="logo"></a>
 
                 <input type="radio" id="burger" name="mobil-menu" class="menu__mobil-input">
-                <button class="menu__mobil-burger"><label for="burger" class="icon-mobil-menu"></label></button>
+                <label for="burger" class="icon-mobil-menu menu__mobil-burger"><a class="menu__mobil-burger"></a></label>
 
                 <input type="radio" id="xmark" name="mobil-menu" class="menu__mobil-input">
-                <button class="menu__mobil-xmark"><label for="xmark" class="icon-xmark"></label></button>
+                <label for="xmark" class="icon-xmark menu__mobil-xmark"><a class="menu__mobil-xmark"></a></label>
 
                 <ul class="menu">
                     <li class="menu__item">
@@ -64,7 +64,7 @@
                         <div class="col-xl-5 col-lg-6 col">
                             <div class="banner__form-box">
                                 <h2 class="form-box__header title4">Try Your <em class="free">FREE</em> Trial Today</h2>
-                                <form class="banner__form" action="">
+                                <form class="banner__form" action="URL">
                                     <div class="form__container">
                                         <div class="banner__form-item">
                                             <input class="banner__form-input" type="text" name="nick" placeholder="Name">
